--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2024"
 [dependencies]
 dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
 once_cell = "1.21.3"
-opentransportdata = { path = "./opentransportdata", optional = true }
+opentransportdata = { path = "./opentransportdata" }
 tokio = "1.49.0"
 
 [features]
@@ -23,5 +23,4 @@ mobile = ["dioxus/mobile"]
 
 server = [
     "dioxus/server",
-    "opentransportdata"
 ]
