--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
 once_cell = "1.21.3"
 opentransportdata = { path = "./opentransportdata" }
 tokio = "1.49.0"
+dotenv = "0.15.0"
 
 [features]
 default = ["web"]
