--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -7,6 +7,7 @@ title = "deklassiert"
 
 # include `assets` in web platform
 [web.resource]
+static_dir = "assets"
 
 # Additional CSS style files
 style = []
