--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -5,6 +5,9 @@
 # HTML title tag content
 title = "deklassiert"
 
+[web.app.release]
+base_path = "deklassiert/"
+
 # include `assets` in web platform
 [web.resource]
 static_dir = "assets"
