--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -4,9 +4,7 @@
 
 # HTML title tag content
 title = "deklassiert"
-
-[web.app.release]
-base_path = "deklassiert/"
+base_path = "/deklassiert/"
 
 # include `assets` in web platform
 [web.resource]
