--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ axum = { version = "0.8.8", optional = true }
 tower = { version = "0.5", optional = true }
 tower-http = { version = "0.6", features = ["fs"], optional = true }
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+web-sys = { version = "0.3", features = ["Window", "Document", "Element", "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition"] }
+
 [features]
 default = ["web"]
 # The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
